учтены замечания